--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <canvas id="canvas1"></canvas>
+    <div class="phone">
+        <h1>For a better experience, open the game on a PC. +1024px</h1>
+    </div>
     <script src="main.js"></script>
 </body>
 
